--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
 services:
-    rabbitmq:
+  rabbitmq:
     image: rabbitmq:3-management
-    container_name: rabbitmq
+    container_name: rabbitmq2
     ports:
       - "15672:15672" # RabbitMQ Management UI
       - "5672:5672" # AMQP port for RabbitMQ consumers/producers
@@ -21,6 +20,8 @@ services:
     environment:
       - RABBITMQ_URL=amqp://rabbitmq:5672
     restart: always
+    volumes:
+      - ./client_order_streamer/data:/app/data
 
   client_gateway:
     build: ./client_gateway
@@ -28,14 +29,5 @@ services:
       rabbitmq:
         condition: service_healthy # Wait for RabbitMQ to be healthy
     environment:
-      - RABBITMQ_URL=amqp://rabbitmq:5672
-    restart: always
-
-  order_manager:
-    build: ./order_manager
-    depends_on:
-      rabbitmq:
-        condition: service_healthy # Wait for RabbitMQ to be healthy
-    environment:
-      - RABBITMQ_URL=amqp://rabbitmq:5672
+      - RABBITMQ_URLL=amqp://rabbitmq:5672
     restart: always
