--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,11 @@ services:
       - "9092:9092" # Kafka default port
     depends_on:
       - zookeeper
+    healthcheck:
+      test: kafka-topics.sh --list --bootstrap-server localhost:9092 || exit 1
+      interval: 5s
+      timeout: 60s
+      retries: 12
 
   client_order_streamer:
     build: ./client_order_streamer
@@ -66,7 +71,7 @@ services:
       - KAFKA_BROKER=kafka:9092
     restart: on-failure
     volumes:
-      - ./matching-engine:/app/matching-engine  # Mount matching-engine folder
+      - ./matching-engine:/app/matching-engine # Mount matching-engine folder
 
   market_data_publisher:
     build: ./market_data_publisher
