--- a/exchange_dashboard/Dockerfile
+++ b/exchange_dashboard/Dockerfile
@@ -1,5 +1,5 @@
-# Use the official Node.js image
-FROM node:22.11.0
+# Use the official Node.js image for building the app
+FROM node:22.11.0 as builder
 
 # Set the working directory in the container
 WORKDIR /app
@@ -16,11 +16,14 @@ COPY . .
 # Build the Vite app for production
 RUN npm run build
 
-# Install a lightweight web server to serve the built files
-RUN npm install -g serve
+# Use the official Nginx image to serve the built files
+FROM nginx:alpine
 
-# Expose the port the app will run on
-EXPOSE 5000
+# Copy the build output from the builder stage into Nginx's public directory
+COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Command to start the app
-CMD ["serve", "-s", "dist", "-l", "5000"]
+# Expose port 80 (the default port for Nginx)
+EXPOSE 80
+
+# Default command is already set to run Nginx
+CMD ["nginx", "-g", "daemon off;"]
