attempt with nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,4 +89,6 @@ services:
   dashboard:
     build: ./exchange_dashboard
     ports:
-      - "5000:80"
+      - "80:80"
+    environment:
+      - NODE_ENV=production
