--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,3 +92,4 @@ services:
       - "80:80"
     environment:
       - NODE_ENV=production
+      - MDP_WS_URL=ws://market_data_publisher:8080 # WebSocket URL for Dashboard to connect
