--- a/exchange-dashboard/package.json
+++ b/exchange-dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend",
+  "name": "exchange-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "ws": "^8.18.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
