everything should work?

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     container_name: zookeeper
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
+    restart: always
     ports:
       - "2181:2181" # Zookeeper default port
 
@@ -34,6 +35,7 @@ services:
       - KAFKA_LOG4J_LOGGERS=org.apache.kafka=ERROR,org.apache.zookeeper=ERROR
     ports:
       - "9092:9092" # Kafka default port
+    restart: always
     depends_on:
       - zookeeper
     healthcheck:
