--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,8 @@ services:
     depends_on:
       rabbitmq:
         condition: service_healthy # Wait for RabbitMQ to be healthy
+    environment:
+      - RABBITMQ_URL=amqp://rabbitmq:5672
     restart: on-failure
     ports:
       - "8080:8080" # Expose the WebSocket server
