--- a/k8_config/market-data-publisher.yaml
+++ b/k8_config/market-data-publisher.yaml
@@ -1,12 +1,11 @@
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: market-data-publisher
 spec:
   selector:
     matchLabels:
       app: market-data-publisher
-  serviceName: "market-data-publisher"
   replicas: 1
   template:
     metadata:
@@ -16,20 +15,16 @@ spec:
       containers:
         - name: market-data-publisher-container
           image: market-data-publisher:latest
+          imagePullPolicy: Never
           ports:
             - containerPort: 8080
           env:
             - name: RABBITMQ_HOST
-              value: rabbitmq
-            - name: RABBITMQ_QUEUE
-              value: processed_orders_queue
-          volumeMounts:
-            - name: mdp-storage
-              mountPath: /data
-      volumes:
-        - name: mdp-storage
-          persistentVolumeClaim:
-            claimName: mdp-pvc
+              value: rabbitmq-service  # Use the service name
+            - name: RABBITMQ_PORT
+              value: "5672" 
+            - name: RABBITMQ_ORDERBOOK_QUEUE
+              value: orderbook_queue  
 ---
 apiVersion: v1
 kind: Service
@@ -42,14 +37,3 @@ spec:
     - port: 8080
       targetPort: 8080
   type: LoadBalancer      
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mdp-pvc
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 5Gi      
