--- a/k8_config/order-manager.yaml
+++ b/k8_config/order-manager.yaml
@@ -1,12 +1,13 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: order-manager
 spec:
+  serviceName: "order-manager-service"
+  replicas: 1
   selector:
     matchLabels:
       app: order-manager
-  replicas: 1
   template:
     metadata:
       labels:
@@ -14,17 +15,29 @@ spec:
     spec:
       containers:
         - name: order-manager-container
-          imagePullPolicy: Never
           image: order-manager:latest
+          imagePullPolicy: Never
           env:
             - name: RABBITMQ_HOST
               value: rabbitmq-service  # Use the service name
             - name: RABBITMQ_PORT
-              value: "5672" 
+              value: "5672"
             - name: RABBITMQ_ORDERBOOK_QUEUE
-              value: orderbook_queue  
+              value: orderbook_queue
             - name: RABBITMQ_MANAGER_QUEUE
               value: order_manager_queue
+          volumeMounts:
+            - name: order-data-volume
+              mountPath: /app/data  # Mount the volume to the app's directory
+
+  volumeClaimTemplates:
+    - metadata:
+        name: order-data-volume
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 1Gi  # Define the size of the persistent volume (adjust as needed)
 ---
 apiVersion: v1
 kind: Service
