--- a/k8_config/rabbitmq.yaml
+++ b/k8_config/rabbitmq.yaml
@@ -16,8 +16,12 @@ spec:
         - name: rabbitmq-container
           image: rabbitmq:3-management
           ports:
-            - containerPort: 5672
-            - containerPort: 15672
+            - name: amqp
+              protocol: TCP
+              containerPort: 5672
+            - name: http
+              protocol: TCP
+              containerPort: 15672
 ---
 apiVersion: v1
 kind: Service
@@ -27,10 +31,12 @@ spec:
   selector:
     app: rabbitmq
   ports:
-    - name: amqp-port
-      port: 5672
+    - name: amqp
+      protocol: TCP
+      port: 5673
       targetPort: 5672
-    - name: http-port
+    - name: http
       port: 15672
       targetPort: 15672
-  type: ClusterIP
+      protocol: TCP
+  type: LoadBalancer
