--- a/k8_config/client-gateway.yaml
+++ b/k8_config/client-gateway.yaml
@@ -44,3 +44,23 @@ spec:
     - port: 3000
       targetPort: 3000
   type: ClusterIP
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: client-gateway-hpa
+  namespace: default 
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: client-gateway
+  minReplicas: 1   # Minimum number of replicas (pods)
+  maxReplicas: 5   # Maximum number of replicas (pods)
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 60   # Target CPU usage (in %) for scaling
