--- a/market_data_publisher/Dockerfile
+++ b/market_data_publisher/Dockerfile
@@ -10,10 +10,10 @@ COPY package*.json ./
 # Install dependencies
 RUN npm install
 
-# Copy the rest of your application code
+# Copy the rest of application code
 COPY . .
 
 EXPOSE 8080
 
-# Command to run your application
+# Command to run application
 CMD ["node", "main.js"]
